other/restrict-automount-sa-token/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  automountServiceAccountToken: false
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  automountServiceAccountToken: false
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/part-of: policy-reporter
  name: goodpod03
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
